testsuite/poke.pkl/eq-arrays-diag-3.pk
/* { dg-do compile } */

var a = [1,2,3]
         == 3#B; /* { dg-error "invalid operand.*\n.*" } */
